# turbomind

./: generate.sh
src/turbomind/: CMakeLists.txt  test.cc  test_linear.cc
src/turbomind/api/python/: CMakeLists.txt  linear.cc
